# proof-aware-crypto-tooling-agent

./: .gitignore  AGENTS.md  DEPLOY.md  ESTATE.md  README.md  WALLET.md  llms.txt  pyproject.toml
docs/: agent-native.md  cockpit.md  products.md  runbook-latch.md  security-2026-07-23-consistency-terminal-check.md  threat-model.md  warden-lab-manual.md  warden-lineup.html
evidence/: README.md  anza-ed25519.attestation.yaml  anza-ed25519.receipt.yaml  betrusted-ed25519.attestation.yaml  betrusted-ed25519.receipt.yaml  dalek-ed25519.attestation.yaml  dalek-ed25519.receipt.yaml  latest-sth.yaml  log-audit.txt  log-metadata.json  risc0-ed25519.attestation.yaml  risc0-ed25519.receipt.yaml
examples/: anza-ed25519.claims.yaml  dalek-ed25519.attestation.yaml  dalek-ed25519.claims.yaml  dalek-ed25519.full.attestation.yaml  pasta-pallas.claims.yaml  repos.yaml
notebooks/: 00_course_map.ipynb  01_threat_model_and_truth_boundary.ipynb  02_claim_cards_and_risk_model.ipynb  03_lean_replay_and_axiom_audit.ipynb  04_proof_hygiene_and_boundaries.ipynb  05_third_party_attestation_provider.ipynb  06_merkle_transparency_logs.ipynb  06a_provider_build_the_log.ipynb  06b_agent_verify_inclusion.ipynb  07_agent_consequences.ipynb  08_capstone_research_program.ipynb  09_dogfood_verified_crypto.ipynb  10_verified_custody_wallet.ipynb  11_the_customers_eye_view.ipynb  README.md
paper/: ltl-v0.0.tex  ltl.tex  (+1 more)
provider/: README.md  pyproject.toml
provider/src/pacta_provider/: __init__.py  cli.py  discovery.py  published_assets.py  service.py  transparency_log.py  web.py  webdocs.py
(+86 files in other folders)
