[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-aware-crypto-tooling-agent"
version = "0.1.0"
description = "Proof-aware crypto tooling evidence interpreter and residual-risk scorer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PACTA prototype maintainers" }]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=8"]

[project.scripts]
pacta = "pacta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
