[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pacta-proof-check-provider"
version = "0.1.0"
description = "Nested proof-checking attestation provider for PACTA."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pacta-provider = "pacta_provider.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
